--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.2.1",
+    "jodit-react": "^1.3.20",
     "material-table": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
